Fixes margin collapse on homepage from btn css

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -11,7 +11,7 @@
   padding: 20px;
 }
 
-.btn {
+.btn-search {
   margin-top: 0px;
   margin-left: 10px;
   margin-bottom: 4px;
